recursion.logo.square.FourSquare.scala.code
override def run(100.) { avance(100.)
                        gauche(90.)
                        avance(100.)
                        
}
